--- a/public/m/css/common.css
+++ b/public/m/css/common.css
@@ -131,3 +131,36 @@
     color: grey;
     text-decoration: line-through;
 }
+
+/*加载中效果*/
+.loading{
+    min-height: 250px;
+    width: 100%;
+    text-align: center;
+    line-height: 250px;
+}
+.loading .mui-icon{
+    color: #069;
+    animation: rotateLoading 1s infinite;
+}
+@keyframes rotateLoading {
+    from{
+        transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+    }
+    to{
+        transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+    }
+}
+/*webkit兼容*/
+@-webkit-keyframes rotateLoading {
+    from{
+        transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+    }
+    to{
+        transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+    }
+}
